Bug 442075 - OverviewWidget::generateThumbnail starts stroke repeatedly when idle
Summary: OverviewWidget::generateThumbnail starts stroke repeatedly when idle
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Unspecified
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-06 12:57 UTC by Alvin Wong
Modified: 2021-09-07 07:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace of OverviewWidget stroke spawning thread (4.89 KB, text/plain)
2021-09-06 12:57 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-09-06 12:57:52 UTC
Created attachment 141333 [details]
backtrace of OverviewWidget stroke spawning thread

For unknown reasons, OverviewWidget::generateThumbnail will repeatedly start a stroke to generate the thumbnail, which triggers thread spawns about every one second due to existing inefficiency with the thread pool implementation.

It seems to happen after creating/opening a file, closing it and then creating another file.

(Note that this report is not about fixing the thread pool implementation.)

I have observed this behaviour with commit e7580089 on Linux docker build and 6ca8117 on Windows nightly build.
Comment 1 Alvin Wong 2021-09-07 07:45:58 UTC
Git commit f16f95f9eb09ef4e4fcca33ae3eebf5a9c452c99 by Alvin Wong.
Committed on 07/09/2021 at 07:44.
Pushed by alvinwong into branch 'master'.

Fix duplicated signal/slot connection in OverviewWidget

This was causing `OverviewWidget::generateThumbnail` to be triggered
every second when more than one document has been opened during one
session.

M  +1    -1    plugins/dockers/overview/overviewwidget.cc

https://invent.kde.org/graphics/krita/commit/f16f95f9eb09ef4e4fcca33ae3eebf5a9c452c99
Comment 2 Alvin Wong 2021-09-07 07:46:25 UTC
Git commit 70849865578ec500378abef9eac9decb46c131d3 by Alvin Wong.
Committed on 07/09/2021 at 07:46.
Pushed by alvinwong into branch 'krita/5.0'.

Fix duplicated signal/slot connection in OverviewWidget

This was causing `OverviewWidget::generateThumbnail` to be triggered
every second when more than one document has been opened during one
session.


(cherry picked from commit f16f95f9eb09ef4e4fcca33ae3eebf5a9c452c99)

M  +1    -1    plugins/dockers/overview/overviewwidget.cc

https://invent.kde.org/graphics/krita/commit/70849865578ec500378abef9eac9decb46c131d3