Fix duplicated signal/slot connection in OverviewWidget

This was causing `OverviewWidget::generateThumbnail` to be triggered
every second when more than one document has been opened during one
session.

BUG: 442075